--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -3,18 +3,18 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
+    <title>Ami App: Mental Health Assistance</title>
   </head>
   <body>
     <div class="header">
       <div class="container">
-        <a href="" class="logo-icon">
+        <a href="/" class="logo-icon">
           <img src="styles/logoami128.png" style="max-height: 48px;max-width:48px;">
         </a>
 
         <ul class="menu">
-          <li><a href="#level1" class="level1">Talk to me</a></li>
-
+          <li><a href="/chat" class="level1">Talk to me</a></li>
           <li><a href="#level2" class="level2">Check In</a></li>
           <li><a href="#level3" class="level3">Crisis</a></li>
           <li class="dropdown">
@@ -36,6 +36,7 @@
         <div class="container">
           <div class="row">
             <div class="slide-copy col-xs-12">
+              <img src="styles/logoami1transparent_360.png" style="margin-top: 50px">
               <h1>Hi there, my name is Ami!</h1>
               <p>This is a safe space meant to help you track your emotional state and take control of your mental health :)</p>
             </div>
