--- a/htdocs/nuance.html
+++ b/htdocs/nuance.html
@@ -6,7 +6,7 @@
 
     <link href="lib/bootstrap.min.css" rel="stylesheet">
     <link href='lib/font-awesome.min.css' rel="stylesheet">
-    <link href='styles/style.css' rel="stylesheet">
+    <link href='styles/nuance.css' rel="stylesheet">
 
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
