--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -47,9 +47,15 @@
       <div class="slide one">
         <div class="container" >
           <div class="row">
-            <div class="slide-copy col-xs-12">
+            <div class="slide-copy">
               <a href="level1"></a>
               <h1>Talk to me</h1>
+              <form>
+                <div class="row">
+                    <input name="message" type="text">
+                    <button type="submit" class="btn">send</button>
+                </div>
+              </form>
             </div> 
           </div>
         </div>      
@@ -62,6 +68,26 @@
               <a href="level2"></a>
               <h1>Quick Check In</h1>
               <p>Just a few quick questions to keep me up to date about your life!</p>
+              <form>
+                <p> 1. How many times did you drink coffee today?</p>
+                <input type="radio" name="coffee" value="0" checked> 0&nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="coffee" value="1-2"> 1-2&nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="coffee" value="3+"> 3+
+                <br>
+                
+                <p> 2. How many times did you go outside this week?</p>
+                <input type="radio" name="out" value="0" checked> 0 &nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="out" value="1-2"> 1-2 &nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="out" value="3+"> 3+ &nbsp; &nbsp; &nbsp;
+                
+                <p> 3. How many times did you exercise this week?</p>
+                <input type="radio" name="workout" value="0" checked> 0 &nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="workout" value="1-2"> 1-2 &nbsp; &nbsp; &nbsp; 
+                <input type="radio" name="workout" value="3+"> 3+ &nbsp; &nbsp; &nbsp;
+                <br>
+                <br>
+                <input type="submit">
+              </form>
             </div>
           </div>
         </div>      
@@ -71,10 +97,30 @@
       <div class="slide three">
         <div class="container">
           <div class="row">
-            <div class="slide-copy col-xs-12">
+            <div class="slide-copy col-xs-5">
               <a href="level3"></a>
               <h1>Crisis</h1>
               <p>Tell me what's wrong and I'll try to get you some help</p>
+              <form>
+                <div class="row">
+                  <input name="message" type="text">
+                  <button type="submit" class="btn">send</button>
+                </div>
+              </form>
+              </div>
+              <div class="numbers col-xs-7">
+                  <ul>
+                    <li><b>Connect!</b> There are people who care about you, call them!<br>
+                        <ul><li>Anna: xxx-xxx-xxxx</li>
+                            <li>Mom: xxx-xxx-xxxx</li></ul></li>
+                    <li><b>Communicate! </b>Someone is waiting here to help!
+                        <ul><li>Suicide hotline: xxx-xxx-xxxx</li>
+                            <li>Nightline: xxx-xxx-xxxx</li></ul></li>
+                    <li><b>Contact! </b>Your psychologist is there for you!
+                        <ul><li>Dr. ABC: xxx-xxx-xxxx</li></ul></li>
+                    <li><b>Remember! </b>If your life is in danger call <b>911</b></li>
+                  </ul>
+              </div>
             </div>
           </div>
         </div>      
