--- a/htdocs/nuance.html
+++ b/htdocs/nuance.html
@@ -4,17 +4,17 @@
 
     <meta charset='utf-8'>
 
-    <link href="lib/bootstrap.min.css" rel="stylesheet">
-    <link href='lib/font-awesome.min.css' rel="stylesheet">
-    <link href='styles/nuance.css' rel="stylesheet">
+    <link href="/lib/bootstrap.min.css" rel="stylesheet">
+    <link href='/lib/font-awesome.min.css' rel="stylesheet">
+    <link href='/styles/nuance.css' rel="stylesheet">
 
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <script src="/lib/jquery.min.js"></script>
+    <script src="/lib/bootstrap.min.js"></script>
 
     <!--  WEB SDK DEPS -->
-    <script src='lib/resampler.js'></script>
-    <script src='lib/speex.js'></script>
-    <script src='nuance.js'></script>
+    <script src='/lib/resampler.js'></script>
+    <script src='/lib/speex.js'></script>
+    <script src='/nuance.js'></script>
 
     <style>
 
@@ -253,7 +253,7 @@
         // ASR Volume visualization
 
         window.requestAnimFrame = (function(){
-            return  window.requestAnimatiindex.htmlonFrame       ||
+            return  window.requestAnimationFrame       ||
                     window.webkitRequestAnimationFrame ||
                     window.mozRequestAnimationFrame    ||
                     function(callback, element){
