--- a/htdocs/chat.html
+++ b/htdocs/chat.html
@@ -2,41 +2,80 @@
 <html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
-  <link href="lib/bootstrap.min.css" rel="stylesheet">
-  <link href="styles/index.css" rel="stylesheet">
+  <link href="/lib/bootstrap.min.css" rel="stylesheet">
+  <link href="/styles/index.css" rel="stylesheet">
   <style>
-    .conversation {
+
+    #conversation {
       height: 80vh;
       max-height: 80vh;
-      margin:20px 0;
+      margin: 20px 0;
       overflow-y: scroll;
       width: 100%;
       border-radius: 2%;
-      padding:10px;
+      padding: 10px;
       border-color: #999;
-      border-width: 5px;
+      border-width: 1px;
+      border-style: solid;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    .container {
+      font-size: 16px;
     }
 
     .answer {
       min-height: 50px;
       max-height: 100px;
       margin: auto;
-
       width: 100%;
     }
 
     input {
-      padding:10px;
+      padding: 10px;
       height: 100%;
-      width: 100%;
+      width: 90%;
     }
+
+    .sentence {
+      min-width: 50px;
+      min-height: 50px;
+      display: inline-block;
+      padding: 15px;
+      border-radius: 10px;
+      vertical-align: middle;
+
+    }
+
+    .ami-answer {
+      border-top-left-radius: 0;
+      background-color: #2bd4c3;
+      color: white;
+    }
+
+    .my-answer {
+      border-top-right-radius: 0;
+      border: 1px solid black;
+      color: black;
+      float: right;
+    }
+
+    #send.btn {
+      background-color: #2bd4c3;
+      float: right;
+      height: 100%;
+
+      padding: 10px;
+    }
+
   </style>
 </head>
 <body>
 <div class="header">
   <div class="container">
     <a href="/" class="logo-icon">
-      <img src="styles/logoami128.png" style="max-height: 48px;max-width:48px;">
+      <img src="/styles/logoami128.png" style="max-height: 48px;max-width:48px;">
     </a>
 
     <ul class="menu">
@@ -79,206 +118,35 @@
   </form>
 </div>
 <div class="container">
-  <div class="conversation">
-    Text will appear here...
+  <div id="conversation">
+    <div class="sentence ami-answer">
+      Hello! What is your name?
+    </div>
   </div>
-<div class="answer">
-  <input placeholder="Enter your answer here...">
-</div>
+
+  <div class="answer">
+    <input id="answer" placeholder="Enter your answer here...">
+    <button class="btn btn-info btn-large" id="send"> Send</button>
+  </div>
 </div>
 <script src="lib/jquery.min.js"></script>
 <script src="script.js"></script>
 
 <script>
-  (function () {
+  (function(){
+    $('#send').on('click',function() {
+      var hello = $('#answer').val();
+      console.log(hello);
+      var $div = $("<div>", {'class': "my-answer sentence"});
+      $div.text(hello);
+      $('#conversation').append($div);
+      $.ajax({url:'/intent',
+        data:button,
+      'success':function(){
 
-    //Set these to avoid having to enter them everytime
-    var URL = 'wss://httpapi.labs.nuance.com/v1?';
-    var APP_ID = "NMDPTRIAL_yusairamk_hotmail_com20151003124820";
-    var APP_KEY = "5fe9253698aa4d70d23d16af27fbfc6fb3f5cb36ed459dab974acd1a9320b8f209dd29a287761259b32808db23054ad7fa150de85bab93f2f5610c8881c47b8b";
-    var USER_ID = "1";
-    var NLU_TAG = "V1_Project775_App375";
-
-
-    var userMedia = undefined;
-    navigator.getUserMedia({
-      audio: true
-    }, function (stream) {
-      userMedia = stream;
-    }, function (error) {
-      console.error("Could not get User Media: " + error);
-    });
-
-    //
-    // APP STATE
-    var isRecording = false;
-    // NODES
-    var $content = $('#content');
-    var $url = $('#url');
-    var $appKey = $('#app_key');
-    var $appId = $('#app_id');
-    var $userId = $('#user_id');
-    var $nluTag = $('#nlu_tag');
-    var $connect = $('#connect');
-    var $ttsGo = $('#tts_go');
-    var $ttsText = $('#tts_text');
-    var $ttsDebug = $('#tts_debug_output');
-    var $asrRecord = $('#asr_go');
-    var $asrLabel = $('#asr_label');
-    var $asrViz = $('#asr_viz');
-    var $asrDebug = $('#asr_debug_output');
-    var $asrVizCtx = $asrViz.get()[0].getContext('2d');
-
-    var dLog = function dLog(msg, logger) {
-      var d = new Date();
-      logger.prepend('<div><em>' + d.toISOString() + '</em> &nbsp; <pre>' + msg + '</pre></div>');
-    };
-
-
-    //
-    // Connect
-    function connect() {
-
-      // INIT THE SDK
-      Nuance.connect({
-        appId: $appId.val(),
-        appKey: $appKey.val(),
-        userId: $userId.val(),
-        url: $url.val(),
-
-        onopen: function () {
-          console.log("Websocket Opened");
-          $content.addClass('connected');
-        },
-        onclose: function () {
-          console.log("Websocket Closed");
-          $content.removeClass('connected');
-        },
-        onmessage: function (msg) {
-          console.log(msg);
-          if (msg.message == "volume") {
-            viz(msg.volume);
-          } else if (msg.result_type == "NVC_TTS_CMD") {
-            dLog(JSON.stringify(msg, null, 2), $ttsDebug);
-          } else if (msg.result_type == "NDSP_ASR_APP_CMD") {
-            dLog(JSON.stringify(msg, null, 2), $asrDebug);
-          }
-        },
-        onerror: function (error) {
-          console.error(error);
-          $content.removeClass('connected');
-        }
-
-      });
-    };
-    $url.val(URL || '');
-    $appId.val(APP_ID || '');
-    $appKey.val(APP_KEY || '');
-    $userId.val(USER_ID || '');
-    $nluTag.val(NLU_TAG || '');
-
-
-    $(window).on('load', connect);
-    // Disconnect
-    $(window).unload(function () {
-      Nuance.disconnect();
-    });
-
-
-    //
-    // TTS
-    function tts(evt) {
-      Nuance.playTTS({
-        language: 'eng-USA',
-        voice: 'ava',
-        text: $ttsText.val()
-      });
-    };
-    $ttsGo.on('click', tts);
-
-
-    //
-    // ASR / NLU
-    function asr(evt) {
-      if (isRecording) {
-        Nuance.stopASR();
-        $asrLabel.text('RECORD');
-      } else {
-
-        var options = {
-          userMedia: userMedia
-        };
-        if ($nluTag.val()) {
-          options.nlu = true;
-          options.tag = $nluTag.val();
-        }
-        Nuance.startASR(options);
-        $asrLabel.text('STOP RECORDING');
-      }
-      isRecording = !isRecording;
-    };
-    $asrRecord.on('click', asr);
-
-
-    //
-    // ASR Volume visualization
-
-    window.requestAnimFrame = (function () {
-      return window.requestAnimatiindex.htmlonFrame ||
-          window.webkitRequestAnimationFrame ||
-          window.mozRequestAnimationFrame ||
-          function (callback, element) {
-            window.setTimeout(callback, 1000 / 60);
-          };
-    })();
-
-    var asrVizData = {};
-
-    function cleanViz() {
-      var parentWidth = $asrViz.parent().width();
-      $asrViz[0].getContext('2d').canvas.width = parentWidth;
-      asrVizData = {
-        w: parentWidth,
-        h: 256,
-        col: 0,
-        tickWidth: 0.5
-      };
-      var w = asrVizData.w, h = asrVizData.h;
-      $asrVizCtx.clearRect(0, 0, w, h); // TODO: pull out height/width
-      $asrVizCtx.strokeStyle = '#333';
-      var y = (h / 2) + 0.5;
-      $asrVizCtx.moveTo(0, y);
-      $asrVizCtx.lineTo(w - 1, y);
-      $asrVizCtx.stroke();
-      asrVizData.col = 0;
-    };
-
-    function viz(amplitudeArray) {
-      var h = asrVizData.h;
-      requestAnimFrame(function () {
-        // Drawing the Time Domain onto the Canvas element
-        var min = 999999;
-        var max = 0;
-        for (var i = 0; i < amplitudeArray.length; i++) {
-          var val = amplitudeArray[i] / asrVizData.h;
-          if (val > max) {
-            max = val;
-          } else if (val < min) {
-            min = val;
-          }
-        }
-        var yLow = h - (h * min) - 1;
-        var yHigh = h - (h * max) - 1;
-        $asrVizCtx.fillStyle = '#6d8f52';
-        $asrVizCtx.fillRect(asrVizData.col, yLow, asrVizData.tickWidth, yHigh - yLow);
-        asrVizData.col += 1;
-        if (asrVizData.col >= asrVizData.w) {
-          asrVizData.col = 0;
-        }
-      });
-    };
-
-  })();
+      }})
+    })
+  }());
 </script>
 </body>
 </html>
